<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:elevation="@dimen/pm20"
        android:id="@+id/container_casa" android:background="#FFBCBE">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardVolver"
        android:layout_width="@dimen/pm40"
        android:layout_height="@dimen/pm40"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/red_app"
        android:padding="@dimen/pm10"
        app:cardCornerRadius="@dimen/pm20"
        app:cardElevation="@dimen/pm5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pm10"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/contentBtncasa"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            app:cardBackgroundColor="@color/red_app" app:cardElevation="@dimen/pm5"
            app:cardCornerRadius="@dimen/pm15">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/constraintLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp">

                <ImageView
                        android:src="@drawable/start"
                        android:layout_width="@dimen/pm35"
                        android:layout_height="@dimen/pm35" android:id="@+id/imgAccionCasa"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/img_accion"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                        style="@style/fontWhiteBold"
                        android:text="@string/start_accion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/txtBtnAccionCasa"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/imgAccionCasa"
                        android:layout_marginStart="8dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtDescCasa"
        style="@style/fontWhiteBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:padding="@dimen/pm20"
        android:text="@string/txt_entrar_casa"
        android:textSize="@dimen/ts18"
        app:layout_constraintBottom_toTopOf="@+id/contentBtncasa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>